Refine demo pages: separate Provider and CLI guides, add recommended structure

--- a/packages/i18nexus-demo/lib/translations/en.json
+++ b/packages/i18nexus-demo/lib/translations/en.json
@@ -1,30 +1,85 @@
 {
-  "i18nexus 완전 가이드": "i18nexus Complete Guide",
-  "설치부터 고급 사용법까지": "From Installation to Advanced Usage",
-  "시작하기": "Get Started",
-  "문서 보기": "View Documentation",
-  "i18nexus 소개": "i18nexus Introduction",
-  "i18nexus에 대해 알아보고 React 국제화를 위한 완벽한 솔루션인 이유를 확인하세요.": "Learn about i18nexus and why it's the perfect solution for React internationalization.",
-  "i18nexus란?": "What is i18nexus?",
-  "자동 코드 변환과 구글 시트 연동으로 국제화를 단순화하는 완전한 React i18n 툴킷입니다.": "A complete React i18n toolkit that simplifies internationalization with automatic code transformation and Google Sheets integration.",
-  "왜 i18nexus인가?": "Why i18nexus?",
-  "자동화 우선 접근법과 개발자 친화적 도구로 기존 i18n 라이브러리의 복잡성을 해결합니다.": "Solves the complexity of existing i18n libraries with automation-first approach and developer-friendly tools.",
-  "동작 원리": "How It Works",
-  "i18nexus를 강력하고 사용하기 쉽게 만드는 세 가지 핵심 구성 요소를 이해하세요.": "Understanding the three core components that make i18nexus powerful and easy to use.",
-  "클라이언트 라이브러리": "Client Library",
-  "원활한 i18n 통합을 위한 React 컴포넌트와 훅": "React components and hooks for seamless i18n integration",
-  "CLI 도구": "CLI Tools",
-  "자동화된 코드 변환 및 번역 관리": "Automated code transformation and translation management",
-  "워크플로우": "Workflow",
-  "코딩부터 배포까지의 완전한 개발 워크플로우": "Complete development workflow from coding to deployment",
-  "아키텍처 및 원칙": "Architecture & Principles",
-  "현대적 원칙으로 구축되고 확장성과 유지보수성을 위해 설계되었습니다.": "Built with modern principles and designed for scalability and maintainability.",
-  "아키텍처": "Architecture",
-  "설계 원칙": "Design Principles",
-  "개발자 경험 최우선": "Developer Experience First",
-  "최소한의 설정으로 최대한의 기능 제공": "Minimal configuration for maximum functionality",
-  "자동화 지향": "Automation First",
-  "자동 코드 변환 및 번역 관리": "Automatic code transformation and translation management",
-  "성능 최적화": "Performance Optimized",
-  "불필요한 재렌더링 방지 및 상태 관리 최적화": "Prevents unnecessary re-renders and optimizes state management"
+  "i18nexus Complete Guide": "i18nexus Complete Guide",
+  "From Installation to Advanced Usage": "From Installation to Advanced Usage",
+  "Provider Guide": "Provider Guide",
+  "CLI Tools Guide": "CLI Tools Guide",
+  "Quick Start": "Quick Start",
+  "1. Install Packages": "1. Install Packages",
+  "2. Wrap Korean Text (Optional)": "2. Wrap Korean Text (Optional)",
+  "3. Setup Provider (Required)": "3. Setup Provider (Required)",
+  "Why i18nexus?": "Why i18nexus?",
+  "Traditional i18n Problems": "Traditional i18n Problems",
+  "Manual text wrapping with t()": "Manual text wrapping with t()",
+  "Hydration mismatch in SSR": "Hydration mismatch in SSR",
+  "Complex setup and configuration": "Complex setup and configuration",
+  "Manual translation file management": "Manual translation file management",
+  "i18nexus Solutions": "i18nexus Solutions",
+  "Automatic text wrapping with CLI": "Automatic text wrapping with CLI",
+  "Zero hydration issues with SSR": "Zero hydration issues with SSR",
+  "Simple setup with sensible defaults": "Simple setup with sensible defaults",
+  "Google Sheets integration": "Google Sheets integration",
+  "Recommended Project Structure": "Recommended Project Structure",
+  "This demo follows the recommended Next.js App Router structure with i18nexus:": "This demo follows the recommended Next.js App Router structure with i18nexus:",
+  "Server Components": "Server Components",
+  "Use layout.tsx for I18nProvider with cookie-based language detection": "Use layout.tsx for I18nProvider with cookie-based language detection",
+  "Client Components": "Client Components",
+  "Use \"use client\" with useTranslation() hook for reactive translations": "Use \"use client\" with useTranslation() hook for reactive translations",
+  "Translation Files": "Translation Files",
+  "Store translations in lib/translations/ directory as JSON files": "Store translations in lib/translations/ directory as JSON files",
+  "I18nProvider Guide": "I18nProvider Guide",
+  "React Context provider for cookie-based language management and SSR support": "React Context provider for cookie-based language management and SSR support",
+  "Key Features": "Key Features",
+  "Cookie-based Language Persistence": "Cookie-based Language Persistence",
+  "Automatically saves and restores user language preference": "Automatically saves and restores user language preference",
+  "Full SSR Support": "Full SSR Support",
+  "Perfect compatibility with Next.js server-side rendering": "Perfect compatibility with Next.js server-side rendering",
+  "Zero Hydration Mismatch": "Zero Hydration Mismatch",
+  "Correct language on first render prevents layout shift": "Correct language on first render prevents layout shift",
+  "TypeScript Support": "TypeScript Support",
+  "Full type safety and autocomplete": "Full type safety and autocomplete",
+  "Basic Setup": "Basic Setup",
+  "1. Server Layout (app/layout.tsx)": "1. Server Layout (app/layout.tsx)",
+  "2. Client Component (app/page.tsx)": "2. Client Component (app/page.tsx)",
+  "Live Demo": "Live Demo",
+  "Current Language": "Current Language",
+  "Language Switcher": "Language Switcher",
+  "💡 Try switching languages - the selection is saved in cookies!": "💡 Try switching languages - the selection is saved in cookies!",
+  "Translation Examples": "Translation Examples",
+  "API Reference": "API Reference",
+  "Hook for accessing the translation function in client components": "Hook for accessing the translation function in client components",
+  "Hook for managing language switching and accessing language state": "Hook for managing language switching and accessing language state",
+  "Automate your i18n workflow with powerful command-line tools": "Automate your i18n workflow with powerful command-line tools",
+  "Installation": "Installation",
+  "Automatically wraps Korean text with t() functions and adds useTranslation imports": "Automatically wraps Korean text with t() functions and adds useTranslation imports",
+  "Basic Usage": "Basic Usage",
+  "Before & After Example": "Before & After Example",
+  "Before": "Before",
+  "After": "After",
+  "Pro Tip": "Pro Tip",
+  "The wrapper intelligently detects Korean text and skips already wrapped text, imports, and object keys": "The wrapper intelligently detects Korean text and skips already wrapped text, imports, and object keys",
+  "Extract translation keys from your code and generate translation files": "Extract translation keys from your code and generate translation files",
+  "Generated Output (JSON)": "Generated Output (JSON)",
+  "Google Sheets Integration": "Google Sheets Integration",
+  "Collaborate with translators by syncing translations with Google Sheets": "Collaborate with translators by syncing translations with Google Sheets",
+  "Upload Translations": "Upload Translations",
+  "Download Translations": "Download Translations",
+  "Setup Required": "Setup Required",
+  "You need to set up Google Service Account credentials:": "You need to set up Google Service Account credentials:",
+  "Create a Google Cloud project": "Create a Google Cloud project",
+  "Enable Google Sheets API": "Enable Google Sheets API",
+  "Create Service Account credentials": "Create Service Account credentials",
+  "Download JSON credentials file": "Download JSON credentials file",
+  "Share your Google Sheet with the service account email": "Share your Google Sheet with the service account email",
+  "Complete Workflow": "Complete Workflow",
+  "Wrap Korean Text": "Wrap Korean Text",
+  "Use i18n-wrapper to automatically wrap hardcoded Korean strings": "Use i18n-wrapper to automatically wrap hardcoded Korean strings",
+  "Extract Translation Keys": "Extract Translation Keys",
+  "Generate translation files from your wrapped text": "Generate translation files from your wrapped text",
+  "Upload to Google Sheets (Optional)": "Upload to Google Sheets (Optional)",
+  "Share with translators via Google Sheets": "Share with translators via Google Sheets",
+  "Download Translated Content (Optional)": "Download Translated Content (Optional)",
+  "Pull completed translations back to your project": "Pull completed translations back to your project",
+  "Deploy": "Deploy",
+  "Your app is now fully internationalized!": "Your app is now fully internationalized!",
+  "환영합니다": "Welcome"
 }
