feat: extractor now merges with existing translations and generates language-specific files

--- a/packages/i18nexus-demo/lib/translations/en.json
+++ b/packages/i18nexus-demo/lib/translations/en.json
@@ -1,85 +1,96 @@
 {
-  "i18nexus Complete Guide": "i18nexus Complete Guide",
-  "From Installation to Advanced Usage": "From Installation to Advanced Usage",
-  "Provider Guide": "Provider Guide",
-  "CLI Tools Guide": "CLI Tools Guide",
-  "Quick Start": "Quick Start",
   "1. Install Packages": "1. Install Packages",
-  "2. Wrap Korean Text (Optional)": "2. Wrap Korean Text (Optional)",
-  "3. Setup Provider (Required)": "3. Setup Provider (Required)",
-  "Why i18nexus?": "Why i18nexus?",
-  "Traditional i18n Problems": "Traditional i18n Problems",
-  "Manual text wrapping with t()": "Manual text wrapping with t()",
-  "Hydration mismatch in SSR": "Hydration mismatch in SSR",
-  "Complex setup and configuration": "Complex setup and configuration",
-  "Manual translation file management": "Manual translation file management",
-  "i18nexus Solutions": "i18nexus Solutions",
-  "Automatic text wrapping with CLI": "Automatic text wrapping with CLI",
-  "Zero hydration issues with SSR": "Zero hydration issues with SSR",
-  "Simple setup with sensible defaults": "Simple setup with sensible defaults",
-  "Google Sheets integration": "Google Sheets integration",
-  "Recommended Project Structure": "Recommended Project Structure",
-  "This demo follows the recommended Next.js App Router structure with i18nexus:": "This demo follows the recommended Next.js App Router structure with i18nexus:",
-  "Server Components": "Server Components",
-  "Use layout.tsx for I18nProvider with cookie-based language detection": "Use layout.tsx for I18nProvider with cookie-based language detection",
-  "Client Components": "Client Components",
-  "Use \"use client\" with useTranslation() hook for reactive translations": "Use \"use client\" with useTranslation() hook for reactive translations",
-  "Translation Files": "Translation Files",
-  "Store translations in lib/translations/ directory as JSON files": "Store translations in lib/translations/ directory as JSON files",
-  "I18nProvider Guide": "I18nProvider Guide",
-  "React Context provider for cookie-based language management and SSR support": "React Context provider for cookie-based language management and SSR support",
-  "Key Features": "Key Features",
-  "Cookie-based Language Persistence": "Cookie-based Language Persistence",
-  "Automatically saves and restores user language preference": "Automatically saves and restores user language preference",
-  "Full SSR Support": "Full SSR Support",
-  "Perfect compatibility with Next.js server-side rendering": "Perfect compatibility with Next.js server-side rendering",
-  "Zero Hydration Mismatch": "Zero Hydration Mismatch",
-  "Correct language on first render prevents layout shift": "Correct language on first render prevents layout shift",
-  "TypeScript Support": "TypeScript Support",
-  "Full type safety and autocomplete": "Full type safety and autocomplete",
-  "Basic Setup": "Basic Setup",
   "1. Server Layout (app/layout.tsx)": "1. Server Layout (app/layout.tsx)",
   "2. Client Component (app/page.tsx)": "2. Client Component (app/page.tsx)",
-  "Live Demo": "Live Demo",
-  "Current Language": "Current Language",
-  "Language Switcher": "Language Switcher",
-  "💡 Try switching languages - the selection is saved in cookies!": "💡 Try switching languages - the selection is saved in cookies!",
-  "Translation Examples": "Translation Examples",
+  "2. Wrap Korean Text (Optional)": "2. Wrap Korean Text (Optional)",
+  "3. Setup Provider (Required)": "3. Setup Provider (Required)",
   "API Reference": "API Reference",
-  "Hook for accessing the translation function in client components": "Hook for accessing the translation function in client components",
-  "Hook for managing language switching and accessing language state": "Hook for managing language switching and accessing language state",
-  "Automate your i18n workflow with powerful command-line tools": "Automate your i18n workflow with powerful command-line tools",
-  "Installation": "Installation",
-  "Automatically wraps Korean text with t() functions and adds useTranslation imports": "Automatically wraps Korean text with t() functions and adds useTranslation imports",
-  "Basic Usage": "Basic Usage",
-  "Before & After Example": "Before & After Example",
-  "Before": "Before",
   "After": "After",
-  "Pro Tip": "Pro Tip",
-  "The wrapper intelligently detects Korean text and skips already wrapped text, imports, and object keys": "The wrapper intelligently detects Korean text and skips already wrapped text, imports, and object keys",
+  "Automate your i18n workflow with powerful command-line tools": "Automate your i18n workflow with powerful command-line tools",
+  "Automatic text wrapping with CLI": "Automatic text wrapping with CLI",
+  "Automatically saves and restores user language preference": "Automatically saves and restores user language preference",
+  "Automatically wraps Korean text with t() functions and adds useTranslation imports": "Automatically wraps Korean text with t() functions and adds useTranslation imports",
+  "Basic Setup": "Basic Setup",
+  "Basic Usage": "Basic Usage",
+  "Before": "Before",
+  "Before & After Example": "Before & After Example",
+  "CLI Tools Guide": "CLI Tools Guide",
+  "Client Components": "Client Components",
+  "Collaborate with translators by syncing translations with Google Sheets": "Collaborate with translators by syncing translations with Google Sheets",
+  "Complete Workflow": "Complete Workflow",
+  "Complex setup and configuration": "Complex setup and configuration",
+  "Cookie-based Language Persistence": "Cookie-based Language Persistence",
+  "Correct language on first render prevents layout shift": "Correct language on first render prevents layout shift",
+  "Create Service Account credentials": "Create Service Account credentials",
+  "Create a Google Cloud project": "Create a Google Cloud project",
+  "Current Language": "Current Language",
+  "Deploy": "Deploy",
+  "Download JSON credentials file": "Download JSON credentials file",
+  "Download Translated Content (Optional)": "Download Translated Content (Optional)",
+  "Download Translations": "Download Translations",
+  "Enable Google Sheets API": "Enable Google Sheets API",
+  "Extract Translation Keys": "Extract Translation Keys",
   "Extract translation keys from your code and generate translation files": "Extract translation keys from your code and generate translation files",
+  "From Installation to Advanced Usage": "From Installation to Advanced Usage",
+  "Full SSR Support": "Full SSR Support",
+  "Full type safety and autocomplete": "Full type safety and autocomplete",
+  "Generate translation files from your wrapped text": "Generate translation files from your wrapped text",
   "Generated Output (JSON)": "Generated Output (JSON)",
   "Google Sheets Integration": "Google Sheets Integration",
-  "Collaborate with translators by syncing translations with Google Sheets": "Collaborate with translators by syncing translations with Google Sheets",
-  "Upload Translations": "Upload Translations",
-  "Download Translations": "Download Translations",
-  "Setup Required": "Setup Required",
-  "You need to set up Google Service Account credentials:": "You need to set up Google Service Account credentials:",
-  "Create a Google Cloud project": "Create a Google Cloud project",
-  "Enable Google Sheets API": "Enable Google Sheets API",
-  "Create Service Account credentials": "Create Service Account credentials",
-  "Download JSON credentials file": "Download JSON credentials file",
-  "Share your Google Sheet with the service account email": "Share your Google Sheet with the service account email",
-  "Complete Workflow": "Complete Workflow",
-  "Wrap Korean Text": "Wrap Korean Text",
-  "Use i18n-wrapper to automatically wrap hardcoded Korean strings": "Use i18n-wrapper to automatically wrap hardcoded Korean strings",
-  "Extract Translation Keys": "Extract Translation Keys",
-  "Generate translation files from your wrapped text": "Generate translation files from your wrapped text",
-  "Upload to Google Sheets (Optional)": "Upload to Google Sheets (Optional)",
-  "Share with translators via Google Sheets": "Share with translators via Google Sheets",
-  "Download Translated Content (Optional)": "Download Translated Content (Optional)",
+  "Google Sheets integration": "Google Sheets integration",
+  "Hook for accessing the translation function in client components": "Hook for accessing the translation function in client components",
+  "Hook for managing language switching and accessing language state": "Hook for managing language switching and accessing language state",
+  "Hydration mismatch in SSR": "Hydration mismatch in SSR",
+  "I18nProvider Guide": "I18nProvider Guide",
+  "Installation": "Installation",
+  "Key Features": "Key Features",
+  "Language Switcher": "Language Switcher",
+  "Live Demo": "Live Demo",
+  "Manual text wrapping with t()": "Manual text wrapping with t()",
+  "Manual translation file management": "Manual translation file management",
+  "Perfect compatibility with Next.js server-side rendering": "Perfect compatibility with Next.js server-side rendering",
+  "Pro Tip": "Pro Tip",
+  "Provider Guide": "Provider Guide",
   "Pull completed translations back to your project": "Pull completed translations back to your project",
-  "Deploy": "Deploy",
+  "Quick Start": "Quick Start",
+  "React Context provider for cookie-based language management and SSR support": "React Context provider for cookie-based language management and SSR support",
+  "Recommended Project Structure": "Recommended Project Structure",
+  "Server Components": "Server Components",
+  "Setup Required": "Setup Required",
+  "Share with translators via Google Sheets": "Share with translators via Google Sheets",
+  "Share your Google Sheet with the service account email": "Share your Google Sheet with the service account email",
+  "Simple setup with sensible defaults": "Simple setup with sensible defaults",
+  "Store translations in lib/translations/ directory as JSON files": "Store translations in lib/translations/ directory as JSON files",
+  "The wrapper intelligently detects Korean text and skips already wrapped text, imports, and object keys": "The wrapper intelligently detects Korean text and skips already wrapped text, imports, and object keys",
+  "This demo follows the recommended Next.js App Router structure with i18nexus:": "This demo follows the recommended Next.js App Router structure with i18nexus:",
+  "Traditional i18n Problems": "Traditional i18n Problems",
+  "Translation Examples": "Translation Examples",
+  "Translation Files": "Translation Files",
+  "TypeScript Support": "TypeScript Support",
+  "Upload Translations": "Upload Translations",
+  "Upload to Google Sheets (Optional)": "Upload to Google Sheets (Optional)",
+  "Use \"use client\" with useTranslation() hook for reactive translations": "Use \"use client\" with useTranslation() hook for reactive translations",
+  "Use i18n-wrapper to automatically wrap hardcoded Korean strings": "Use i18n-wrapper to automatically wrap hardcoded Korean strings",
+  "Use layout.tsx for I18nProvider with cookie-based language detection": "Use layout.tsx for I18nProvider with cookie-based language detection",
+  "Why i18nexus?": "Why i18nexus?",
+  "Wrap Korean Text": "Wrap Korean Text",
+  "You need to set up Google Service Account credentials:": "You need to set up Google Service Account credentials:",
   "Your app is now fully internationalized!": "Your app is now fully internationalized!",
-  "환영합니다": "Welcome"
+  "Zero Hydration Mismatch": "Zero Hydration Mismatch",
+  "Zero hydration issues with SSR": "Zero hydration issues with SSR",
+  "i18nexus Complete Guide": "i18nexus Complete Guide",
+  "i18nexus Solutions": "i18nexus Solutions",
+  "i18nexus를 프로젝트에 통합하고 사용하는 방법을 단계별로 알아보세요.": "i18nexus를 프로젝트에 통합하고 사용하는 방법을 단계별로 알아보세요.",
+  "개발자 경험 최우선": "개발자 경험 최우선",
+  "불필요한 재렌더링 방지 및 상태 관리 최적화": "불필요한 재렌더링 방지 및 상태 관리 최적화",
+  "사용 가이드": "사용 가이드",
+  "설계 원칙": "설계 원칙",
+  "성능 최적화": "성능 최적화",
+  "아키텍처 및 원칙": "아키텍처 및 원칙",
+  "자동 코드 변환 및 번역 관리": "자동 코드 변환 및 번역 관리",
+  "자동화 지향": "자동화 지향",
+  "최소한의 설정으로 최대한의 기능 제공": "최소한의 설정으로 최대한의 기능 제공",
+  "현대적 원칙으로 구축되고 확장성과 유지보수성을 위해 설계되었습니다.": "현대적 원칙으로 구축되고 확장성과 유지보수성을 위해 설계되었습니다.",
+  "환영합니다": "Welcome",
+  "💡 Try switching languages - the selection is saved in cookies!": "💡 Try switching languages - the selection is saved in cookies!"
 }
