docs: update demo with extractor guide and add QUICK_START.md

--- a/packages/i18nexus-demo/lib/translations/en.json
+++ b/packages/i18nexus-demo/lib/translations/en.json
@@ -5,10 +5,12 @@
   "2. Wrap Korean Text (Optional)": "2. Wrap Korean Text (Optional)",
   "3. Setup Provider (Required)": "3. Setup Provider (Required)",
   "API Reference": "API Reference",
+  "Adds only new keys found in your code": "Adds only new keys found in your code",
   "After": "After",
   "Automate your i18n workflow with powerful command-line tools": "Automate your i18n workflow with powerful command-line tools",
   "Automatic text wrapping with CLI": "Automatic text wrapping with CLI",
   "Automatically saves and restores user language preference": "Automatically saves and restores user language preference",
+  "Automatically sorts keys alphabetically": "Automatically sorts keys alphabetically",
   "Automatically wraps Korean text with t() functions and adds useTranslation imports": "Automatically wraps Korean text with t() functions and adds useTranslation imports",
   "Basic Setup": "Basic Setup",
   "Basic Usage": "Basic Usage",
@@ -30,11 +32,13 @@
   "Download Translations": "Download Translations",
   "Enable Google Sheets API": "Enable Google Sheets API",
   "Extract Translation Keys": "Extract Translation Keys",
+  "Extract translation keys from your code and automatically merge with existing translations": "Extract translation keys from your code and automatically merge with existing translations",
   "Extract translation keys from your code and generate translation files": "Extract translation keys from your code and generate translation files",
   "From Installation to Advanced Usage": "From Installation to Advanced Usage",
   "Full SSR Support": "Full SSR Support",
   "Full type safety and autocomplete": "Full type safety and autocomplete",
   "Generate translation files from your wrapped text": "Generate translation files from your wrapped text",
+  "Generated Files": "Generated Files",
   "Generated Output (JSON)": "Generated Output (JSON)",
   "Google Sheets Integration": "Google Sheets Integration",
   "Google Sheets integration": "Google Sheets integration",
@@ -48,7 +52,9 @@
   "Live Demo": "Live Demo",
   "Manual text wrapping with t()": "Manual text wrapping with t()",
   "Manual translation file management": "Manual translation file management",
+  "Output Example": "Output Example",
   "Perfect compatibility with Next.js server-side rendering": "Perfect compatibility with Next.js server-side rendering",
+  "Preserves all existing translations": "Preserves all existing translations",
   "Pro Tip": "Pro Tip",
   "Provider Guide": "Provider Guide",
   "Pull completed translations back to your project": "Pull completed translations back to your project",
@@ -59,8 +65,11 @@
   "Setup Required": "Setup Required",
   "Share with translators via Google Sheets": "Share with translators via Google Sheets",
   "Share your Google Sheet with the service account email": "Share your Google Sheet with the service account email",
+  "Shows detailed statistics of changes": "Shows detailed statistics of changes",
   "Simple setup with sensible defaults": "Simple setup with sensible defaults",
+  "Smart Merging": "Smart Merging",
   "Store translations in lib/translations/ directory as JSON files": "Store translations in lib/translations/ directory as JSON files",
+  "The extractor intelligently merges with existing translations:": "The extractor intelligently merges with existing translations:",
   "The wrapper intelligently detects Korean text and skips already wrapped text, imports, and object keys": "The wrapper intelligently detects Korean text and skips already wrapped text, imports, and object keys",
   "This demo follows the recommended Next.js App Router structure with i18nexus:": "This demo follows the recommended Next.js App Router structure with i18nexus:",
   "Traditional i18n Problems": "Traditional i18n Problems",
@@ -80,17 +89,17 @@
   "Zero hydration issues with SSR": "Zero hydration issues with SSR",
   "i18nexus Complete Guide": "i18nexus Complete Guide",
   "i18nexus Solutions": "i18nexus Solutions",
-  "i18nexus를 프로젝트에 통합하고 사용하는 방법을 단계별로 알아보세요.": "i18nexus를 프로젝트에 통합하고 사용하는 방법을 단계별로 알아보세요.",
-  "개발자 경험 최우선": "개발자 경험 최우선",
-  "불필요한 재렌더링 방지 및 상태 관리 최적화": "불필요한 재렌더링 방지 및 상태 관리 최적화",
-  "사용 가이드": "사용 가이드",
-  "설계 원칙": "설계 원칙",
-  "성능 최적화": "성능 최적화",
-  "아키텍처 및 원칙": "아키텍처 및 원칙",
-  "자동 코드 변환 및 번역 관리": "자동 코드 변환 및 번역 관리",
-  "자동화 지향": "자동화 지향",
-  "최소한의 설정으로 최대한의 기능 제공": "최소한의 설정으로 최대한의 기능 제공",
-  "현대적 원칙으로 구축되고 확장성과 유지보수성을 위해 설계되었습니다.": "현대적 원칙으로 구축되고 확장성과 유지보수성을 위해 설계되었습니다.",
+  "i18nexus를 프로젝트에 통합하고 사용하는 방법을 단계별로 알아보세요.": "Learn step-by-step how to integrate and use i18nexus in your project.",
+  "개발자 경험 최우선": "Developer Experience First",
+  "불필요한 재렌더링 방지 및 상태 관리 최적화": "Prevents unnecessary re-renders and optimizes state management",
+  "사용 가이드": "Usage Guide",
+  "설계 원칙": "Design Principles",
+  "성능 최적화": "Performance Optimized",
+  "아키텍처 및 원칙": "Architecture & Principles",
+  "자동 코드 변환 및 번역 관리": "Automatic code transformation and translation management",
+  "자동화 지향": "Automation First",
+  "최소한의 설정으로 최대한의 기능 제공": "Minimal configuration for maximum functionality",
+  "현대적 원칙으로 구축되고 확장성과 유지보수성을 위해 설계되었습니다.": "Built with modern principles and designed for scalability and maintainability.",
   "환영합니다": "Welcome",
   "💡 Try switching languages - the selection is saved in cookies!": "💡 Try switching languages - the selection is saved in cookies!"
 }
