--- a/packages/i18nexus-demo/lib/translations/ko.json
+++ b/packages/i18nexus-demo/lib/translations/ko.json
@@ -5,10 +5,12 @@
   "2. Wrap Korean Text (Optional)": "2. Wrap Korean Text (Optional)",
   "3. Setup Provider (Required)": "3. Setup Provider (Required)",
   "API Reference": "API Reference",
+  "Adds only new keys found in your code": "Adds only new keys found in your code",
   "After": "After",
   "Automate your i18n workflow with powerful command-line tools": "Automate your i18n workflow with powerful command-line tools",
   "Automatic text wrapping with CLI": "Automatic text wrapping with CLI",
   "Automatically saves and restores user language preference": "Automatically saves and restores user language preference",
+  "Automatically sorts keys alphabetically": "Automatically sorts keys alphabetically",
   "Automatically wraps Korean text with t() functions and adds useTranslation imports": "Automatically wraps Korean text with t() functions and adds useTranslation imports",
   "Basic Setup": "Basic Setup",
   "Basic Usage": "Basic Usage",
@@ -31,11 +33,13 @@
   "Download Translations": "Download Translations",
   "Enable Google Sheets API": "Enable Google Sheets API",
   "Extract Translation Keys": "Extract Translation Keys",
+  "Extract translation keys from your code and automatically merge with existing translations": "Extract translation keys from your code and automatically merge with existing translations",
   "Extract translation keys from your code and generate translation files": "Extract translation keys from your code and generate translation files",
   "From Installation to Advanced Usage": "From Installation to Advanced Usage",
   "Full SSR Support": "Full SSR Support",
   "Full type safety and autocomplete": "Full type safety and autocomplete",
   "Generate translation files from your wrapped text": "Generate translation files from your wrapped text",
+  "Generated Files": "Generated Files",
   "Generated Output (JSON)": "Generated Output (JSON)",
   "Google Sheets Integration": "Google Sheets Integration",
   "Google Sheets integration": "Google Sheets integration",
@@ -49,7 +53,9 @@
   "Live Demo": "Live Demo",
   "Manual text wrapping with t()": "Manual text wrapping with t()",
   "Manual translation file management": "Manual translation file management",
+  "Output Example": "Output Example",
   "Perfect compatibility with Next.js server-side rendering": "Perfect compatibility with Next.js server-side rendering",
+  "Preserves all existing translations": "Preserves all existing translations",
   "Pro Tip": "Pro Tip",
   "Provider Guide": "Provider Guide",
   "Pull completed translations back to your project": "Pull completed translations back to your project",
@@ -60,8 +66,11 @@
   "Setup Required": "Setup Required",
   "Share with translators via Google Sheets": "Share with translators via Google Sheets",
   "Share your Google Sheet with the service account email": "Share your Google Sheet with the service account email",
+  "Shows detailed statistics of changes": "Shows detailed statistics of changes",
   "Simple setup with sensible defaults": "Simple setup with sensible defaults",
+  "Smart Merging": "Smart Merging",
   "Store translations in lib/translations/ directory as JSON files": "Store translations in lib/translations/ directory as JSON files",
+  "The extractor intelligently merges with existing translations:": "The extractor intelligently merges with existing translations:",
   "The wrapper intelligently detects Korean text and skips already wrapped text, imports, and object keys": "The wrapper intelligently detects Korean text and skips already wrapped text, imports, and object keys",
   "This demo follows the recommended Next.js App Router structure with i18nexus:": "This demo follows the recommended Next.js App Router structure with i18nexus:",
   "Traditional i18n Problems": "Traditional i18n Problems",
